fixed room card padlock alignment

--- a/public/less/room-card.less
+++ b/public/less/room-card.less
@@ -135,6 +135,8 @@ button, .btn {
 
     .octicon {
       color: @trpLightGrey;
+      font-size: inherit;
+      line-height: inherit;
     }
 
     h3 {
